--- a/_includes/head.html
+++ b/_includes/head.html
@@ -19,3 +19,23 @@
 <link rel="stylesheet" href="{{ base_path }}/assets/css/main.css">
 
 <meta http-equiv="cleartype" content="on">
+
+<!-- ✅ JSON-LD Structured Data for SEO -->
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Person",
+  "name": "Micah Y. Baum",
+  "alternateName": "Micah Baum",
+  "url": "https://micah-baum.github.io",
+  "sameAs": [
+    "https://scholar.google.com/citations?user=xFVVMNoAAAAJ&hl=en",
+    "https://github.com/micah-baum"
+  ],
+  "jobTitle": "PhD Candidate in Public Policy & Economics",
+  "affiliation": {
+    "@type": "CollegeOrUniversity",
+    "name": "University of Michigan"
+  }
+}
+</script>
